--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "scripts": {
     "build": "echo 'No build step required'"
   },
-  "keywords": ["firebase", "photo-upload", "qr-code"],
+  "keywords": [
+    "firebase",
+    "photo-upload",
+    "qr-code"
+  ],
   "author": "RaresKeY",
   "license": "ISC",
   "dependencies": {
-    "firebase": "^9.0.0"
+    "firebase": "^9.23.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
